--- a/BEDA/BehaviorSettingView.xib
+++ b/BEDA/BehaviorSettingView.xib
@@ -53,7 +53,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrameSize">{589, 23}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSSegmentedCell" key="NSCell" id="19197293">
@@ -108,7 +108,8 @@
 										<array class="NSMutableArray" key="NSSubviews"/>
 										<string key="NSFrameSize">{587, 361}</string>
 										<reference key="NSSuperview" ref="1040316814"/>
-										<reference key="NSNextKeyView" ref="11214080"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="454250303"/>
 										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<bool key="NSEnabled">YES</bool>
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -118,6 +119,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrameSize">{587, 17}</string>
 											<reference key="NSSuperview" ref="454250303"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="1040316814"/>
 											<reference key="NSTableView" ref="8311219"/>
 										</object>
@@ -209,7 +211,7 @@
 											</object>
 											<object class="NSTableColumn" id="138284214">
 												<string key="NSIdentifier">Behavior Kind</string>
-												<double key="NSWidth">156</double>
+												<double key="NSWidth">433</double>
 												<double key="NSMinWidth">10</double>
 												<double key="NSMaxWidth">3.4028234663852886e+38</double>
 												<object class="NSTableHeaderCell" key="NSHeaderCell">
@@ -255,7 +257,7 @@
 												<bytes key="NSWhite">MC41AA</bytes>
 											</object>
 										</object>
-										<double key="NSRowHeight">17</double>
+										<double key="NSRowHeight">35</double>
 										<int key="NSTvFlags">-700448768</int>
 										<reference key="NSDelegate"/>
 										<reference key="NSDataSource"/>
@@ -269,6 +271,7 @@
 								</array>
 								<string key="NSFrame">{{1, 17}, {587, 361}}</string>
 								<reference key="NSSuperview" ref="667163180"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="8311219"/>
 								<string key="NSReuseIdentifierKey">_NS:11</string>
 								<reference key="NSDocView" ref="8311219"/>
@@ -280,6 +283,7 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 								<reference key="NSSuperview" ref="667163180"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="661286204"/>
 								<string key="NSReuseIdentifierKey">_NS:58</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -290,15 +294,16 @@
 							<object class="NSScroller" id="661286204">
 								<reference key="NSNextResponder" ref="667163180"/>
 								<int key="NSvFlags">-2147483392</int>
-								<string key="NSFrame">{{1, 362}, {544, 16}}</string>
+								<string key="NSFrame">{{1, 362}, {587, 16}}</string>
 								<reference key="NSSuperview" ref="667163180"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="255200044"/>
 								<string key="NSReuseIdentifierKey">_NS:60</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								<int key="NSsFlags">1</int>
 								<reference key="NSTarget" ref="667163180"/>
 								<string key="NSAction">_doScroller:</string>
-								<double key="NSPercent">0.87179487179487181</double>
+								<double key="NSPercent">0.99829931972789121</double>
 							</object>
 							<object class="NSClipView" id="454250303">
 								<reference key="NSNextResponder" ref="667163180"/>
@@ -308,6 +313,7 @@
 								</array>
 								<string key="NSFrame">{{1, 0}, {587, 17}}</string>
 								<reference key="NSSuperview" ref="667163180"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="797073749"/>
 								<reference key="NSDocView" ref="797073749"/>
 								<reference key="NSBGColor" ref="480823484"/>
@@ -316,14 +322,15 @@
 						</array>
 						<string key="NSFrame">{{0, 3}, {589, 379}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSNextKeyView" ref="454250303"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="1040316814"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="689758492"/>
 						<reference key="NSHScroller" ref="661286204"/>
 						<reference key="NSContentView" ref="1040316814"/>
 						<reference key="NSHeaderClipView" ref="454250303"/>
-						<bytes key="NSScrollAmts">QSAAAEEgAABBmAAAQZgAAA</bytes>
+						<bytes key="NSScrollAmts">QSAAAEEgAABCFAAAQhQAAA</bytes>
 						<double key="NSMinMagnification">0.25</double>
 						<double key="NSMaxMagnification">4</double>
 						<double key="NSMagnification">1</double>
@@ -331,6 +338,7 @@
 				</array>
 				<string key="NSFrameSize">{589, 388}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="667163180"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -395,7 +403,7 @@
 								<object class="NSTextField" id="1044075765">
 									<reference key="NSNextResponder" ref="1046432081"/>
 									<int key="NSvFlags">266</int>
-									<string key="NSFrameSize">{162, 17}</string>
+									<string key="NSFrameSize">{439, 17}</string>
 									<reference key="NSSuperview" ref="1046432081"/>
 									<reference key="NSNextKeyView" ref="689758492"/>
 									<string key="NSAntiCompressionPriority">{250, 750}</string>
@@ -417,7 +425,7 @@
 									<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								</object>
 							</array>
-							<string key="NSFrame">{{140, 1}, {156, 17}}</string>
+							<string key="NSFrame">{{140, 1}, {433, 17}}</string>
 							<reference key="NSNextKeyView" ref="1044075765"/>
 						</object>
 						<reference key="destination" ref="1044075765"/>
@@ -824,7 +832,7 @@
 						<reference key="object" ref="1044075765"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="734423868"/>
-							<object class="IBNSLayoutConstraint" id="25754449">
+							<object class="IBNSLayoutConstraint" id="107499765">
 								<reference key="firstItem" ref="1044075765"/>
 								<int key="firstAttribute">7</int>
 								<int key="relation">0</int>
@@ -832,7 +840,7 @@
 								<int key="secondAttribute">0</int>
 								<float key="multiplier">1</float>
 								<object class="IBLayoutConstant" key="constant">
-									<double key="value">156</double>
+									<double key="value">433</double>
 								</object>
 								<float key="priority">1000</float>
 								<reference key="containingView" ref="1044075765"/>
@@ -1012,8 +1020,8 @@
 						<reference key="parent" ref="11214080"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">446</int>
-						<reference key="object" ref="25754449"/>
+						<int key="objectID">448</int>
+						<reference key="object" ref="107499765"/>
 						<reference key="parent" ref="1044075765"/>
 					</object>
 				</array>
@@ -1066,7 +1074,7 @@
 				<string key="372.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="372.userInterfaceItemIdentifier">Behavior Kind</string>
 				<array class="NSMutableArray" key="373.IBNSViewMetadataConstraints">
-					<reference ref="25754449"/>
+					<reference ref="107499765"/>
 				</array>
 				<boolean value="NO" key="373.IBNSViewMetadataTranslatesAutoresizingMaskIntoConstraints"/>
 				<string key="373.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1096,7 +1104,7 @@
 				<string key="432.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="436.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="437.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="446.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="448.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<boolean value="YES" key="7.isInViewBasedMode"/>
@@ -1120,9 +1128,72 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">446</int>
+			<int key="maxID">448</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">BehaviorSettingController</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">changeModeFromSegmentedControl:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">changeModeFromSegmentedControl:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">changeModeFromSegmentedControl:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="modeSelector">NSSegmentedControl</string>
+						<string key="table">NSTableView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="modeSelector">
+							<string key="name">modeSelector</string>
+							<string key="candidateClassName">NSSegmentedControl</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="table">
+							<string key="name">table</string>
+							<string key="candidateClassName">NSTableView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/BehaviorSettingController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">ColorCellView</string>
+					<string key="superclassName">NSTableCellView</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">colorwell</string>
+						<string key="NS.object.0">NSColorWell</string>
+					</object>
+					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<string key="NS.key.0">colorwell</string>
+						<object class="IBToOneOutletInfo" key="NS.object.0">
+							<string key="name">colorwell</string>
+							<string key="candidateClassName">NSColorWell</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ColorCellView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSLayoutConstraint</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/NSLayoutConstraint.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
